# OmmTests

./: .gitignore  CMakeLists.txt  TestBinForces.cpp  TestBinProperties.cpp  TestControlBerendsenBins.cpp  TestHello.cpp  TestOpenMM.cpp  TestSimpleGtest.cpp  foam-1728.json  foam.json
